--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
     <script src="js/loadFbx.js"></script>
     <script src="js/main.js"></script>
     <script src="js/renderImage.js"></script>
-    
+
 
     <div>
         <a href="#"
-            onclick="loadFbx('Sanitary_Toilets_Gala_Street-Square-BTW-600x350.fbx',{x:85.57,y:-100,z:67.97},true)">Gala</a>
+            onclick="loadFbx('Sanitary_Toilets_Gala_Street-Square-BTW-600x350.fbx',{x:85.57,y:-100,z:67.97},true,{ x: 35, y: 80, z: 64 })">Gala</a>
         <a href="#"
-            onclick="loadFbx('Sanitary_Toilets_Gala_Klea-Wall-hung-WC-pan-540x340.fbx',{x:85.57,y:-100,z:67.97},true)">Gala
+            onclick="loadFbx('Sanitary_Toilets_Gala_Klea-Wall-hung-WC-pan-540x340.fbx',{x:85.57,y:-100,z:67.97},true,{ x: 35, y: 80, z: 64 })">Gala
             2</a>
         <a href="#"
-            onclick="loadFbx('Sanitary_Toilets_Ponte-Giulio_WC-with-front-opening-hung.fbx',{x:85.57,y:-100,z:67.97},true)">Ponte
+            onclick="loadFbx('Sanitary_Toilets_Ponte-Giulio_WC-with-front-opening-hung.fbx',{x:85.57,y:-100,z:67.97},true,{ x: 35, y: 80, z: 64 })">Ponte
             2</a>
         <a href="#"
-            onclick="loadFbx('Sanitary_Toilets_Roca_MERIDIAN-WC-for-PRM.fbx',{x:85.57,y:-100,z:67.97},true)">Sanitary_Toilets_Roca_MERIDIAN</a>
+            onclick="loadFbx('Sanitary_Toilets_Roca_MERIDIAN-WC-for-PRM.fbx',{x:85.57,y:-100,z:67.97},true,{ x: 35, y: 80, z: 64 })">Sanitary_Toilets_Roca_MERIDIAN</a>
         <a href="#"
-            onclick="loadFbx('Sanitary_Toilets_Porcher_MATURA-Cuvette-seule.fbx',{x:85.57,y:-100,z:67.97},true)">Porcher</a>
-        <a href="#" onclick="loadFbx('3564.3ds',{x:85.57,y:-100,z:67.97},true)">3Ds</a>
+            onclick="loadFbx('Sanitary_Toilets_Porcher_MATURA-Cuvette-seule.fbx',{x:85.57,y:-100,z:67.97},true,{ x: 35, y: 80, z: 64 })">Porcher</a>
+        <a href="#" onclick="loadFbx('3564.3ds',{x:85.57,y:-100,z:67.97},true,{ x: 35, y: 80, z: 64 })">3Ds</a>
     </div>
 </body>
 
