--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
     <script src="js/inflate.min.js"></script>
     <script src="js/FBXLoader.js"></script>
     <script src="js/OrbitControls.js"></script>
-    <!-- <script src="js/config.js"></script> -->
     <script src="js/TDSLoader.js"></script>
     <script src="js/loadFbx.js"></script>
     <script src="js/main.js"></script>
     <script src="js/renderImage.js"></script>
-
+    <script src="js/data.js"></script>
 
     <div>
         <a href="#"
