--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="js/TDSLoader.js"></script>
     <script src="js/loadFbx.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/loadTexture.js"></script>
     <script src="js/renderImage.js"></script>
     <script src="js/data.js"></script>
 
