--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div>
         <a href="#" onclick="getImage()">Get Image</a>
     </div>
+    <div id="abc"></div>
     <script src="js/three.min.js"></script>
     <script src="js/inflate.min.js"></script>
     <script src="js/FBXLoader.js"></script>
