--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="js/loadTexture.js"></script>
     <script src="js/renderImage.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/config.js"></script>
 
     <div>
         <a href="#"
