--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="js/renderImage.js"></script>
     <script src="js/data.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/Reflector.js"></script>
 
     <div>
         <a href="#"
