--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
     <script src="js/loadTexture.js"></script>
     <script src="js/renderImage.js"></script>
     <script src="js/data.js"></script>
-    <script src="js/config.js"></script>
+    
     <script src="js/Reflector.js"></script>
+
+    <script src="js/sink.js"></script>
+    <script src="js/tap.js"></script>
+    <script src="js/toilet.js"></script>
+    <script src="js/woodenBox.js"></script>
+    <script src="js/config.js"></script>
 
     <div>
         <a href="#"
