--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="js/OrbitControls.js"></script>
     <script src="js/TDSLoader.js"></script>
     <script src="js/loadFbx.js"></script>
+    <script src="js/Reflector.js"></script>
     <script src="js/main.js"></script>
     <script src="js/loadTexture.js"></script>
     <script src="js/renderImage.js"></script>
@@ -33,6 +34,7 @@
     <script src="js/toilet.js"></script>
     <script src="js/woodenBox.js"></script>
     <script src="js/config.js"></script>
+    
 
 </body>
 
